Fix quote section off-center alignment css

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ button {
 }
 
 .thor {
-  margin: -40px;
+  margin-top: -40px;
   text-align: right;
   font-size: 20px;
   font-weight: 900;
